Hourly scheduled redeploy 21563c32d8627c75ed48a7e306cd3f1567ac4eb7

--- a/document-types/aaib_report.html
+++ b/document-types/aaib_report.html
@@ -365,13 +365,13 @@
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-cessna-185a-skywagon-g-blos">AAIB investigation to Cessna 185A Skywagon, G-BLOS</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-sikorsky-s-92a-g-lawx">AAIB investigation to Sikorsky S-92A, G-LAWX    </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-north-american-p-51d-mustang-g-shwn-and-north-american-p-51d-20-modified-mustang-g-bixl">AAIB investigation to North American P-51D, Mustang, G-SHWN and North American P-51D-20 (Modified), Mustang, G-BIXL   </a></li>
-<li><a href="https://www.gov.uk/aaib-reports/annual-safety-review-2020">Annual Safety Review 2020</a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-raf-2000-gtx-se-g-bxkm">AAIB investigation to RAF 2000 GTX-SE, G-BXKM</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-robinson-r44-clipper-i-g-clio">AAIB investigation to Robinson R44 Clipper I, G-CLIO    </a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aircraft-accident-report-aar-1-slash-2021-airbus-a321-211-g-pown-26-february-2020">Aircraft Accident Report AAR 1/2021 - Airbus A321-211, G-POWN, 26 February 2020</a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-reims-cessna-f406-g-rvlw">AAIB investigation to Reims Cessna F406, G-RVLW  </a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-raf-2000-gtx-se-g-bxkm">AAIB investigation to RAF 2000 GTX-SE, G-BXKM</a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-boeing-a75l300-stearman-g-cgpy">AAIB investigation to Boeing A75L300 Stearman, G-CGPY</a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-avro-652a-anson-t21-g-vroe">AAIB investigation to Avro 652A Anson T21, G-VROE  </a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aircraft-accident-report-aar-1-slash-2021-airbus-a321-211-g-pown-26-february-2020">Aircraft Accident Report AAR 1/2021 - Airbus A321-211, G-POWN, 26 February 2020</a></li>
+<li><a href="https://www.gov.uk/aaib-reports/annual-safety-review-2020">Annual Safety Review 2020</a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-reims-cessna-f406-g-rvlw">AAIB investigation to Reims Cessna F406, G-RVLW  </a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-bombardier-bd700-1a10-cs-gld">AAIB investigation to Bombardier BD700-1A10, CS-GLD  </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=aaib_report&amp;count=10">Source query from Search API</a></p>
 
