--- a/document-types/closed_consultation.html
+++ b/document-types/closed_consultation.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/consultations/the-future-buildings-standard">The Future Buildings Standard</a></li>
 <li><a href="https://www.gov.uk/government/consultations/covid-status-certification-review-call-for-evidence">COVID-Status Certification Review - Call for evidence - now closed</a></li>
 <li><a href="https://www.gov.uk/government/consultations/national-planning-policy-framework-and-national-model-design-code-consultation-proposals">National Planning Policy Framework and National Model Design Code: consultation proposals</a></li>
-<li><a href="https://www.gov.uk/government/consultations/ending-the-sale-of-energy-drinks-to-children">Ending the sale of energy drinks to children</a></li>
+<li><a href="https://www.gov.uk/government/consultations/clean-heat-grant-further-policy-design-proposals">Clean Heat Grant: further policy design proposals</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=closed_consultation&amp;count=10">Source query from Search API</a></p>
 
