--- a/document-types/person.html
+++ b/document-types/person.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: person</h1>
 
-  <p>There are <strong>4192</strong> pages with document type
+  <p>There are <strong>4193</strong> pages with document type
 &lsquo;person&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/people/matthew-hancock">The Rt Hon Matt Hancock MP</a></li>
-<li><a href="https://www.gov.uk/government/people/sajid-javid">The Rt Hon Sajid Javid MP</a></li>
 <li><a href="https://www.gov.uk/government/people/christopher-whitty">Professor Chris Whitty</a></li>
-<li><a href="https://www.gov.uk/government/people/gina-coladangelo">Gina Coladangelo</a></li>
-<li><a href="https://www.gov.uk/government/people/priti-patel">The Rt Hon Priti Patel MP</a></li>
-<li><a href="https://www.gov.uk/government/people/nadhim-zahawi">Nadhim Zahawi MP</a></li>
+<li><a href="https://www.gov.uk/government/people/sajid-javid">The Rt Hon Sajid Javid MP</a></li>
+<li><a href="https://www.gov.uk/government/people/matthew-hancock">The Rt Hon Matt Hancock MP</a></li>
 <li><a href="https://www.gov.uk/government/people/grant-shapps">The Rt Hon Grant Shapps MP</a></li>
-<li><a href="https://www.gov.uk/government/people/michael-gove">The Rt Hon Michael Gove MP</a></li>
+<li><a href="https://www.gov.uk/government/people/priti-patel">The Rt Hon Priti Patel MP</a></li>
 <li><a href="https://www.gov.uk/government/people/boris-johnson">The Rt Hon Boris Johnson MP</a></li>
+<li><a href="https://www.gov.uk/government/people/michael-gove">The Rt Hon Michael Gove MP</a></li>
+<li><a href="https://www.gov.uk/government/people/nadhim-zahawi">Nadhim Zahawi MP</a></li>
 <li><a href="https://www.gov.uk/government/people/rishi-sunak">The Rt Hon Rishi Sunak MP</a></li>
+<li><a href="https://www.gov.uk/government/people/kwasi-kwarteng">The Rt Hon Kwasi Kwarteng MP</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=person&amp;count=10">Source query from Search API</a></p>
 
