--- a/document-types/residential_property_tribunal_decision.html
+++ b/document-types/residential_property_tribunal_decision.html
@@ -370,8 +370,8 @@
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-8-victoria-court-kingsbridge-avenue-acton-london-w3-9ah-lon-slash-00aj-slash-f77-slash-2020-slash-0126">Flat 8 Victoria Court, Kingsbridge Avenue, Acton, London, W3 9AH : LON/00AJ/F77/2020/0126</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/two-hyde-park-square-london-w2-2jy-lon-slash-00bk-slash-ldc-slash-2021-slash-0069">Two Hyde Park Square, London, W2 2JY  LON/00BK/LDC/2021/0069</a></li>
 <li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-8-135-haverstock-hill-london-nw3-4ru-ref-lon-slash-00ag-slash-olr-slash-2020-slash-0312-lon-slash-00ag-slash-oc9-slash-2020-slash-0034-lon-slash-00ag-slash-olr-slash-2020-slash-0746-lon-slash-00ag-slash-o">Flat 8, 135 Haverstock Hill, London  NW3 4RU - Ref: LON/00AG/OLR/2020/0312,  LON/00AG/OC9/2020/0034,  LON/00AG/OLR/2020/0746,   LON/00AG/OLR/2021/0108 &amp;  LON/00AG/OC9/2021/0023</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/3-luton-road-walthamstow-london-e17-5ln-lon-slash-00bh-slash-htc-slash-2020-slash-0010">3 Luton Road, Walthamstow, London E17 5LN: LON/00BH/HTC/2020/0010</a></li>
-<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/5-harrier-court-siddeley-drive-hounslow-middlesex-tw4-7dl-ref-lon-slash-00at-slash-olr-slash-2020-slash-0924">5 Harrier Court, Siddeley Drive, Hounslow, Middlesex TW4 7DL - Ref: LON/00AT/OLR/2020/0924</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/flat-9-fairland-house-masons-hill-bromley-kent-br2-9jj-lon-slash-00af-slash-f77-slash-2021-slash-0178">Flat 9 Fairland House, Masons Hill, Bromley, Kent, BR2 9JJ : LON/00AF/F77/2021/0178</a></li>
+<li><a href="https://www.gov.uk/residential-property-tribunal-decisions/43-egerton-gardens-london-sw3-2dd-lon-slash-00aw-slash-ldc-slash-2021-slash-0084">43 Egerton Gardens, London, SW3 2DD: LON/00AW/LDC/2021/0084</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=residential_property_tribunal_decision&amp;count=10">Source query from Search API</a></p>
 
