--- a/document-types/speech.html
+++ b/document-types/speech.html
@@ -367,12 +367,12 @@
 <li><a href="https://www.gov.uk/government/speeches/mansion-house-speech-2021-rishi-sunak">Mansion House Speech 2021 – Rishi Sunak</a></li>
 <li><a href="https://www.gov.uk/government/speeches/pm-statement-at-press-conference-with-german-chancellor-2-july-2021">PM statement at press conference with German Chancellor: 2 July 2021</a></li>
 <li><a href="https://www.gov.uk/government/speeches/local-government-association-annual-conference-2021-secretary-of-states-speech">Local Government Association annual conference 2021: Secretary of State&rsquo;s speech</a></li>
-<li><a href="https://www.gov.uk/government/speeches/pm-statement-at-coronavirus-press-conference-14-june-2021">PM statement at coronavirus press conference: 14 June 2021</a></li>
 <li><a href="https://www.gov.uk/government/speeches/pm-address-to-the-nation-on-coronavirus-23-march-2020">Prime Minister&rsquo;s statement on coronavirus (COVID-19): 23 March 2020</a></li>
+<li><a href="https://www.gov.uk/government/speeches/pm-statement-at-coronavirus-press-conference-14-june-2021">PM statement at coronavirus press conference: 14 June 2021</a></li>
 <li><a href="https://www.gov.uk/government/speeches/ofsteds-chief-inspector-at-the-festival-of-education-2021">Ofsted&rsquo;s Chief Inspector at the Festival of Education, 2021</a></li>
-<li><a href="https://www.gov.uk/government/speeches/minister-for-covid-vaccine-deployment-statement-on-coronavirus-covid-19-23-june-2021">Minister for COVID Vaccine Deployment statement on coronavirus (COVID-19): 23 June 2021</a></li>
 <li><a href="https://www.gov.uk/government/speeches/environment-secretary-george-eustice-speaks-at-cereals-2021">Environment Secretary George Eustice speaks at Cereals 2021</a></li>
-<li><a href="https://www.gov.uk/government/speeches/the-4th-industrial-revolution">The Fourth Industrial Revolution</a></li>
+<li><a href="https://www.gov.uk/government/speeches/un-human-rights-council-universal-periodic-review-adoption-rwanda">UN Human Rights Council: Universal Periodic Review Adoption – Rwanda</a></li>
+<li><a href="https://www.gov.uk/government/speeches/pm-statement-on-coronavirus-17-july-2020">Prime Minister&rsquo;s statement on coronavirus (COVID-19): 17 July 2020</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=speech&amp;count=10">Source query from Search API</a></p>
 
