--- a/document-types/uk_market_conformity_assessment_body.html
+++ b/document-types/uk_market_conformity_assessment_body.html
@@ -369,7 +369,7 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/ccqs-uk-ltd">CCQS UK LTD</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/satra-technology-centre-ltd">SATRA Technology Centre Ltd</a></li>
 <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/tuv-rheinland-uk-ltd">TUV Rheinland UK Ltd</a></li>
-<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/shirley-technologies-limited-trading-as-bttg">Shirley Technologies Limited Trading as BTTG</a></li>
+<li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies/lancashire-county-council">Lancashire County Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=uk_market_conformity_assessment_body&amp;count=10">Source query from Search API</a></p>
 
