--- a/apps/email-alert-api.html
+++ b/apps/email-alert-api.html
@@ -536,7 +536,7 @@ notification services. Currently supports only <a href="https://www.notification
 <h3 id="running-the-test-suite">Running the test suite</h3>
 <pre lang="bash"><code>bundle exec rake
 </code></pre>
-<h3 id="manuals-and-decisions">Manuals and decisions</h3>
+<h3 id="further-documentation">Further documentation</h3>
 <p>Check the <a href="https://github.com/alphagov/email-alert-api/blob/main/docs/">docs/</a> directory for detailed instructions, decisions and other documentation.</p>
 <h2 id="licence">Licence</h2>
 <p><a href="https://github.com/alphagov/email-alert-api/blob/main/LICENCE">MIT License</a></p>
