--- a/apps/specialist-publisher.html
+++ b/apps/specialist-publisher.html
@@ -483,8 +483,8 @@
       <li><a href="https://www.gov.uk/cma-cases" class="govuk-link">Competition and Markets Authority cases</a></li>
       <li><a href="https://www.gov.uk/drug-safety-update/chloramphenicol-eye-drops-containing-borax-or-boric-acid-buffers-use-in-children-younger-than-2-years" class="govuk-link">Chloramphenicol eye drops containing borax or boric acid buffers: use in children younger than 2 years </a></li>
       <li><a href="https://www.gov.uk/uk-market-conformity-assessment-bodies" class="govuk-link">UK Market Conformity Assessment Bodies</a></li>
+      <li><a href="https://www.gov.uk/drug-safety-update/covid-19-vaccines-updates-for-july-2021" class="govuk-link">COVID-19 vaccines: updates for July 2021 </a></li>
       <li><a href="https://www.gov.uk/aaib-reports" class="govuk-link">Air Accidents Investigation Branch reports</a></li>
-      <li><a href="https://www.gov.uk/drug-device-alerts/field-safety-notices-21-to-25-june-2021" class="govuk-link">Field Safety Notices: 21 to 25 June 2021</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
