--- a/document-types/correspondence.html
+++ b/document-types/correspondence.html
@@ -369,9 +369,9 @@
 <li><a href="https://www.gov.uk/government/publications/esfa-update-23-june-2021">ESFA Update: 23 June 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/letter-from-minister-keegan-on-the-further-education-workforce-data-collection">Letter from Minister Keegan on the Further Education Workforce Data Collection</a></li>
 <li><a href="https://www.gov.uk/government/publications/treasury-direction-made-by-the-chancellor-under-sections-71-and-76-of-the-coronavirus-act-2020">Treasury Direction made by the Chancellor under Section 76 of the Coronavirus Act 2020</a></li>
+<li><a href="https://www.gov.uk/government/publications/prime-ministers-letter-to-gareth-southgate-manager-of-the-england-mens-football-team">Prime Minister’s letter to Gareth Southgate, Manager of the England men’s football team</a></li>
 <li><a href="https://www.gov.uk/government/publications/letters-to-businesses-about-importing-and-exporting-goods-between-great-britain-and-the-eu">Letters to businesses about importing and exporting goods between Great Britain and the EU</a></li>
 <li><a href="https://www.gov.uk/government/publications/exchange-of-letters-between-pm-and-james-brokenshire">Exchange of letters between PM and James Brokenshire</a></li>
-<li><a href="https://www.gov.uk/government/publications/letter-from-the-deputy-chief-medical-officer-to-uk-vaccine-study-volunteers">Letter from the Deputy Chief Medical Officer to UK vaccine study volunteers</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=correspondence&amp;count=10">Source query from Search API</a></p>
 
