--- a/document-types/flood_and_coastal_erosion_risk_management_research_report.html
+++ b/document-types/flood_and_coastal_erosion_risk_management_research_report.html
@@ -365,11 +365,11 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/coastal-monitoring-and-historical-coastal-change">Coastal monitoring and historical coastal change </a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/accounting-for-residual-uncertainty-an-update-to-the-fluvial-freeboard-guide">Accounting for residual uncertainty: an update to the fluvial freeboard guide</a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/guide-to-drawdown-capacity-for-reservoir-safety-and-emergency-planning">Guide to drawdown capacity for reservoir safety and emergency planning</a></li>
+<li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/fluvial-design-guide">Fluvial design guide</a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/development-of-interim-national-guidance-on-non-stationary-fluvial-flood-frequency-estimation">Development of interim national guidance on non-stationary fluvial flood frequency estimation</a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/risk-assessment-of-coastal-erosion">Risk assessment of coastal erosion</a></li>
-<li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/fluvial-design-guide">Fluvial design guide</a></li>
 <li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/channel-management-handbook-for-flood-risk-management">Channel management handbook for flood risk management</a></li>
-<li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/flood-and-coastal-erosion-risk-management-fcerm-quantifying-the-benefits">Flood and coastal erosion risk management (FCERM): quantifying the benefits</a></li>
+<li><a href="https://www.gov.uk/flood-and-coastal-erosion-risk-management-research-reports/update-to-the-suds-manual">Update to the SuDS Manual</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=flood_and_coastal_erosion_risk_management_research_report&amp;count=10">Source query from Search API</a></p>
 
