--- a/document-types/international_development_fund.html
+++ b/document-types/international_development_fund.html
@@ -370,8 +370,8 @@
 <li><a href="https://www.gov.uk/international-development-funding/dfid-funded-small-charities-challenge-fund-sccf">Small Charities Challenge Fund (SCCF)</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/assistive-technology-impact-fund-research-and-innovation">Assistive Technology Impact Fund</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/connecting-classrooms">Connecting Classrooms through Global Learning</a></li>
+<li><a href="https://www.gov.uk/international-development-funding/girls-education-challenge">Girls&rsquo; Education Challenge</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/nihr-global-health-research-groups-research-and-innovation">NIHR Global Health Research Groups</a></li>
-<li><a href="https://www.gov.uk/international-development-funding/private-infrastructure-development-group">Private Infrastructure Development Group</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=international_development_fund&amp;count=10">Source query from Search API</a></p>
 
