--- a/document-types/maib_report.html
+++ b/document-types/maib_report.html
@@ -370,7 +370,7 @@
 <li><a href="https://www.gov.uk/maib-reports/flooding-and-sinking-of-trawler-ocean-quest">Flooding and sinking of trawler Ocean Quest </a></li>
 <li><a href="https://www.gov.uk/maib-reports/safety-warning-about-multiple-cruise-ship-anchor-failures">Safety warning about multiple cruise ship anchor failures</a></li>
 <li><a href="https://www.gov.uk/maib-reports/flooding-and-sinking-of-stern-trawler-ocean-way">Flooding and sinking of stern trawler Ocean Way</a></li>
-<li><a href="https://www.gov.uk/maib-reports/collision-between-motor-yachts-minx-and-vision-with-loss-of-1-life">Collision between motor yachts Minx and Vision with loss of 1 life</a></li>
+<li><a href="https://www.gov.uk/maib-reports/engine-failure-and-subsequent-fire-on-ro-ro-cargo-vessel-finlandia-seaways-with-1-person-injured">Engine failure and subsequent fire on ro-ro cargo vessel Finlandia Seaways with 1 person injured</a></li>
 <li><a href="https://www.gov.uk/maib-reports/near-miss-between-ro-ro-ferry-stena-superfast-vii-and-royal-navy-submarine">Near miss between ro-ro ferry Stena Superfast VII and Royal Navy submarine</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=maib_report&amp;count=10">Source query from Search API</a></p>
