--- a/document-types/procurement.html
+++ b/document-types/procurement.html
@@ -370,9 +370,9 @@
 <li><a href="https://www.gov.uk/government/organisations/department-for-work-pensions/about/procurement">Department for Work and Pensions – Procurement at DWP</a></li>
 <li><a href="https://www.gov.uk/government/organisations/home-office/about/procurement">Home Office – Procurement at Home Office</a></li>
 <li><a href="https://www.gov.uk/government/organisations/hm-revenue-customs/about/procurement">HM Revenue &amp; Customs – Procurement at HMRC</a></li>
-<li><a href="https://www.gov.uk/government/organisations/department-of-health-and-social-care/about/procurement">Department of Health and Social Care – Procurement at DHSC</a></li>
 <li><a href="https://www.gov.uk/government/organisations/nuclear-decommissioning-authority/about/procurement">Nuclear Decommissioning Authority – Procurement at NDA</a></li>
-<li><a href="https://www.gov.uk/government/organisations/public-health-england/about/procurement">Public Health England – Procurement at PHE</a></li>
+<li><a href="https://www.gov.uk/government/organisations/department-of-health-and-social-care/about/procurement">Department of Health and Social Care – Procurement at DHSC</a></li>
+<li><a href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs/about/procurement">Department for Environment, Food &amp; Rural Affairs – Procurement at Defra</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=procurement&amp;count=10">Source query from Search API</a></p>
 
