--- a/document-types/publication_scheme.html
+++ b/document-types/publication_scheme.html
@@ -368,11 +368,11 @@
 <li><a href="https://www.gov.uk/government/organisations/ministry-of-defence/about/publication-scheme">Ministry of Defence – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/charity-commission/about/publication-scheme">The Charity Commission – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/cabinet-office/about/publication-scheme">Cabinet Office – Publication scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/maritime-and-coastguard-agency/about/publication-scheme">Maritime and Coastguard Agency – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs/about/publication-scheme">Department for Environment, Food &amp; Rural Affairs – Publication scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/maritime-and-coastguard-agency/about/publication-scheme">Maritime and Coastguard Agency – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/environment-agency/about/publication-scheme">Environment Agency – Publication scheme</a></li>
 <li><a href="https://www.gov.uk/government/organisations/security-industry-authority/about/publication-scheme">Security Industry Authority – Publication scheme</a></li>
-<li><a href="https://www.gov.uk/government/organisations/highways-england/about/publication-scheme">Highways England – Publication scheme</a></li>
+<li><a href="https://www.gov.uk/government/organisations/competition-and-markets-authority/about/publication-scheme">Competition and Markets Authority – Publication scheme</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=publication_scheme&amp;count=10">Source query from Search API</a></p>
 
