--- a/document-types/research_for_development_output.html
+++ b/document-types/research_for_development_output.html
@@ -364,12 +364,12 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/research-for-development-outputs/fair-society-healthy-lives-the-marmot-review-strategic-review-of-health-inequalities-in-england-post-2010">Fair society, healthy lives : the Marmot Review : strategic review of health inequalities in England post-2010.</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/rapid-evidence-assessment-on-the-impacts-of-climate-change-on-migration-patterns">Rapid evidence assessment on the impacts of climate change on migration patterns</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/nature-based-solutions-a-review-of-key-issues-in-india">Nature based Solutions - A Review of key Issues in India</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/treatments-for-suppression-of-lactation">Treatments for suppression of lactation</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/policing-and-marginalised-groups">Policing and Marginalised Groups</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/per-diem-policy-analysis-toolkit">Per diem policy analysis toolkit.</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/good-clinical-laboratory-practice-gclp">Good Clinical Laboratory Practice (GCLP)</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/per-diem-policy-analysis-toolkit">Per diem policy analysis toolkit.</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/treatments-for-suppression-of-lactation">Treatments for suppression of lactation</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/what-is-civil-society-its-role-and-value-in-2018">What is Civil Society, its Role and Value in 2018?</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/etiologies-of-illness-among-patients-meeting-integrated-management-of-adolescent-and-adult-illness-district-clinician-manual-criteria-for-severe-infections-in-northern-tanzania">Etiologies of illness among patients meeting integrated management of adolescent and adult illness district clinician manual criteria for severe infections in northern Tanzania</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/benefits-of-stem-education">Benefits of STEM Education</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=research_for_development_output&amp;count=10">Source query from Search API</a></p>
 
