--- a/document-types/transparency.html
+++ b/document-types/transparency.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: transparency</h1>
 
-  <p>There are <strong>13958</strong> pages with document type
+  <p>There are <strong>13961</strong> pages with document type
 &lsquo;transparency&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -365,14 +365,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/publications/royal-courts-of-justice-cause-list">Royal Courts of Justice Cause List</a></li>
 <li><a href="https://www.gov.uk/government/publications/employers-who-have-claimed-through-the-coronavirus-job-retention-scheme">Employers who have claimed through the Coronavirus Job Retention Scheme</a></li>
-<li><a href="https://www.gov.uk/government/publications/coronavirus-grant-funding-local-authority-payments-to-small-and-medium-businesses">Coronavirus grant funding: local authority payments to small and medium businesses</a></li>
 <li><a href="https://www.gov.uk/government/publications/business-and-property-courts-rolls-building-cause-list">Business and Property Courts Rolls Building Cause List</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-grant-funding-local-authority-payments-to-small-and-medium-businesses">Coronavirus grant funding: local authority payments to small and medium businesses</a></li>
 <li><a href="https://www.gov.uk/government/publications/current-registered-providers-of-social-housing">Current registered providers of social housing</a></li>
 <li><a href="https://www.gov.uk/government/publications/the-queens-birthday-honours-2021">The Queen&rsquo;s Birthday Honours 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/reported-coronavirus-covid-19-cases-by-registered-early-years-and-childcare-settings">Reported coronavirus (COVID-19) notifications by registered early years and childcare settings</a></li>
 <li><a href="https://www.gov.uk/government/publications/weekly-statistics-for-nhs-test-and-trace-england-17-june-to-23-june-2021">Weekly statistics for NHS Test and Trace (England): 17 June to 23 June 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/active-mot-test-stations">Active MOT test stations</a></li>
 <li><a href="https://www.gov.uk/government/publications/sage-91-minutes-coronavirus-covid-19-response-3-june-2021">SAGE 91 minutes: Coronavirus (COVID-19) response, 3 June 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-england-briefing-30-june-2021">Coronavirus England briefing, 30 June 2021</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=transparency&amp;count=10">Source query from Search API</a></p>
 
