--- a/manual/setting-up-new-rails-app.html
+++ b/manual/setting-up-new-rails-app.html
@@ -241,7 +241,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/15774ea3b30105a027cd64ed8b41a6f2e0c574c3">9 Jul 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/86a1d2be580b7082f710309e2b9897479d6c8aa7">12 Jul 2021</a>
 </div>
 
  <h1 id='header'>Set up a new Rails application</h1> <h2 id='before-you-start'>Before you start</h2><p>Before you create a Ruby on Rails (“Rails”) app, you must complete all steps in the <a href="https://docs.publishing.service.gov.uk/manual/get-started.html">GOV.UK developer get started documentation</a>.</p>
@@ -395,7 +395,7 @@ One or more paragraphs describing the app:
 
 A list of links to example pages rendered by the app.
 
-<span class="gu">## Nomeclature</span>
+<span class="gu">## Nomenclature</span>
 
 A list of definitions for unusual terms in the code.
 
