--- a/document-types/guidance.html
+++ b/document-types/guidance.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: guidance</h1>
 
-  <p>There are <strong>21100</strong> pages with document type
+  <p>There are <strong>21098</strong> pages with document type
 &lsquo;guidance&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,7 +364,7 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/publications/covid-19-stay-at-home-guidance">COVID-19: guidance for households with possible coronavirus infection</a></li>
-<li><a href="https://www.gov.uk/government/publications/covid-19-response-summer-2021-roadmap">COVID-19 Response: Summer 2021 (Roadmap)</a></li>
+<li><a href="https://www.gov.uk/government/publications/covid-19-response-summer-2021-roadmap">COVID-19 Response: Summer 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/list-of-private-providers-of-coronavirus-testing">Private providers of coronavirus (COVID-19) testing</a></li>
 <li><a href="https://www.gov.uk/government/publications/guidance-for-contacts-of-people-with-possible-or-confirmed-coronavirus-covid-19-infection-who-do-not-live-with-the-person">Guidance for contacts of people with confirmed coronavirus (COVID-19) infection who do not live with the person</a></li>
 <li><a href="https://www.gov.uk/government/publications/organisation-testing-registration-record-of-users">Organisation testing registration: record of users</a></li>
