--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -446,16 +446,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
-      <li><a href="http://www.copelandbc.gov.uk/" class="govuk-link">Copeland Borough Council</a></li>
-      <li><a href="http://www.ne-derbyshire.gov.uk" class="govuk-link">North East Derbyshire District Council</a></li>
-      <li><a href="http://www.newark-sherwooddc.gov.uk" class="govuk-link">Newark and Sherwood District Council</a></li>
-      <li><a href="https://www.pointsoflight.gov.uk/" class="govuk-link">Points of Light</a></li>
-      <li><a href="http://www.rbkc.gov.uk/" class="govuk-link">Royal Borough of Kensington and Chelsea Council</a></li>
-      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
-      <li><a href="http://www.workplacepensions.gov.uk/" class="govuk-link">Workplace Pensions</a></li>
-      <li><a href="http://www.hants.gov.uk" class="govuk-link">Hampshire County Council</a></li>
+      <li><a href="http://www.telford.gov.uk" class="govuk-link">Telford &amp; Wrekin Council</a></li>
+      <li><a href="http://www.rushmoor.gov.uk" class="govuk-link">Rushmoor Borough Council</a></li>
+      <li><a href="http://www.hinckleyandbosworthonline.org.uk" class="govuk-link">Hinckley and Bosworth Borough Council</a></li>
+      <li><a href="http://www.havant.gov.uk" class="govuk-link">Havant Borough Council</a></li>
       <li><a href="http://www.southsomerset.gov.uk" class="govuk-link">South Somerset District Council</a></li>
+      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
+      <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
+      <li><a href="http://www.renfrewshire.gov.uk" class="govuk-link">Renfrewshire Council</a></li>
+      <li><a href="http://www.canterbury.gov.uk" class="govuk-link">Canterbury City Council</a></li>
+      <li><a href="http://www.bournemouth.gov.uk" class="govuk-link">Bournemouth Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
